HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiSafeRecordGenericUnbounded/Source/Main.uv
//! Rejected FFI specimen for generic record paths with unconstrained field type parameters.

#layout(C)
public record GenericFfiRecord<TValue> {
    public value: TValue
}

extern "C" {
    public procedure importedRecord(value: GenericFfiRecord) -> i32
}

